--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,26 @@
-# Node modules
-frontend/node_modules/
-backend/node_modules/
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Environment files
-.env
-backend/.env
-frontend/.env
-
-# Build output
-frontend/dist/
-backend/dist/
-dist-ssr/
+node_modules
+dist
+dist-ssr
 *.local
 
-# Logs
-*.log
-
-# IDE / OS files
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-.idea/
-.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+.env
